--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>
                     Администрация нашего сайта глубоко извиняется за некорректную работу нашего развлекательного
                     портала в связи с отсутсвием у нашего оператора электронного набора и верстки опыта работы с Java
-                    Script. Поэтому на главной странице будет временно опубликован анекдот наиболее понравившийся
+                    Script. Поэтому на главной странице будет временно опубликован анекдот, наиболее понравившийся
                     нашим читателям.
                 </p>
             </div>
